
noinst_LTLIBRARIES = libhat-trie.la

libhat_trie_la_SOURCES = hat-trie.h    hat-trie.c \
                         ahtable.h     ahtable.c \
                         misc.h        misc.c \
                         murmurhash3.h murmurhash3.c \
                         common.h      pstdint.h

EXTRA_DIST = README.md COPYING


