
noinst_LTLIBRARIES = libbam.la

libbam_la_SOURCES = bam_aux.c \
                    bam.c \
                    bam_endian.h \
                    bam.h \
                    bam_import.c \
                    bam_index.c \
                    bam_pileup.c \
                    bgzf.c \
                    bgzf.h \
                    faidx.c \
                    faidx.h \
                    khash.h \
                    knetfile.c \
                    knetfile.h \
                    kseq.h \
                    ksort.h \
                    kstring.c \
                    kstring.h \
                    razf.c \
                    razf.h \
                    sam.c \
                    sam.h \
                    sam_header.c \
                    sam_header.h \
                    samtools_extra.h \
                    samtools_extra.c

libbam_la_CFLAGS = -D_USE_KNETFILE -Wno-format -w

EXTRA_DIST = AUTHORS COPYING

