
noinst_LTLIBRARIES = libseqbias.la

libseqbias_la_SOURCES = kmer_matrix.hpp     kmer_matrix.cpp \
                        motif.hpp           motif.cpp \
                        pos_table.h         pos_table.c \
                        sequencing_bias.hpp sequencing_bias.cpp \
                        twobitseq.hpp       twobitseq.cpp

libseqbias_la_CPPFLAGS = -I..
